[package]
name = "webidentity-tester"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0"
aws-sdk-sts = "0"
rusoto_core = "0.48.0"
rusoto_sts = "0.48.0"
rusoto_credential = "0.48.0"
tokio = { version = "1", features = ["full"] }